[gd_scene load_steps=7 format=3 uid="uid://bcrovy0vk2c7k"]

[ext_resource type="Script" uid="uid://bojfsmtsy7lk3" path="res://isometric_pathfinding_enemy.gd" id="1_2m0db"]
[ext_resource type="Texture2D" uid="uid://b3yvov8rlil58" path="res://Assets/Entities/SpellThief_Witch.png" id="1_tanu1"]
[ext_resource type="PackedScene" uid="uid://cqxwrjqw3rswj" path="res://Entities/fireball.tscn" id="3_vg7xu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ycny0"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rac8w"]
radius = 51.0098

[sub_resource type="CircleShape2D" id="CircleShape2D_ink4a"]
radius = 17.0

[node name="WitchEnemy" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 2
script = ExtResource("1_2m0db")

[node name="EntityContainer" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="EntityContainer"]
position = Vector2(0, -8)
texture = ExtResource("1_tanu1")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_ycny0")

[node name="AggroRange" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
shape = SubResource("CircleShape2D_rac8w")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_ink4a")

[node name="AttackSpeed" type="Timer" parent="."]

[node name="Fireball" parent="." instance=ExtResource("3_vg7xu")]
visible = false

[connection signal="area_entered" from="AggroRange" to="." method="_on_aggro_range_area_entered"]
[connection signal="area_entered" from="AttackRange" to="." method="_on_attack_range_area_entered"]
[connection signal="area_exited" from="AttackRange" to="." method="_on_attack_range_area_exited"]
[connection signal="timeout" from="AttackSpeed" to="." method="_on_attack_speed_timeout"]
